--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,5 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run tests
+      env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         pytest
